<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.HomeFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="21dp"
            android:src="@drawable/v2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/v2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/daleel_listing_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:fontFamily="@font/arabic_bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_search"
            android:ems="10"
            android:fontFamily="@font/arabic_roman"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_44dp"
            android:layout_height="@dimen/_44dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/worthy"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_44dp"
            android:layout_height="@dimen/_44dp"
            android:src="@drawable/female_new_3x"
            android:layout_marginStart="@dimen/_20dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/_44dp"
            android:layout_height="@dimen/_44dp"
            android:src="@drawable/listing_placeholder_3x"
            android:layout_marginStart="@dimen/_20dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20dp"
            tools:listitem="@layout/item_home"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="#AD2641"
            />

        <TextView
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/recycler"
            app:layout_constraintEnd_toEndOf="@id/recycler"
            app:layout_constraintStart_toStartOf="@id/recycler"
            app:layout_constraintTop_toTopOf="@id/recycler"
            app:layout_constraintVertical_bias="0.42000002" />

        <TextView
            android:id="@+id/no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_not_connected_try_later"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/recycler"
            app:layout_constraintEnd_toEndOf="@id/recycler"
            app:layout_constraintStart_toStartOf="@id/recycler"
            app:layout_constraintTop_toTopOf="@id/recycler"
            app:layout_constraintVertical_bias="0.42000002" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>